Fixed layout issues in echologic container.

--- a/public/stylesheets/echologic.css
+++ b/public/stylesheets/echologic.css
@@ -163,6 +163,7 @@ strong {
 #missionStatementHolder {
   position:    absolute;
   top:		   0px;
+  left:        -5px;
   width: 	   580px;
   text-align:  center;
   color:       #FFF;
